//
// **********************************************************************
// *** DO NOT EDIT!  This file was autogenerated by genenum.py        ***
// *** Please edit LibApisEnums.enum instead
// **********************************************************************
//
// Copyright 2014 Xcalar, Inc. All rights reserved.
//
// No use, or distribution, of this source code is permitted in any form or
// means without a valid, written license agreement with Xcalar, Inc.
// Please refer to the included "COPYING" file for terms and conditions
// regarding the use and redistribution of this software.
//
// **********************************************************************
// *** DO NOT EDIT!  This file was autogenerated by genenum.py        ***
// *** Please edit LibApisEnums.enum instead
// **********************************************************************
//

enum XcalarApisT {
    XcalarApiUnknown = 0,
    XcalarApiGetVersion = 1,
    XcalarApiBulkLoad = 2,
    XcalarApiIndex = 3,
    XcalarApiCountUnique = 4,
    XcalarApiShutdown = 5,
    XcalarApiGetStat = 6,
    XcalarApiGetStatByGroupId = 7,
    XcalarApiResetStat = 8,
    XcalarApiGetStatGroupIdMap = 9,
    XcalarApiListTables = 10,
    XcalarApiListDatasets = 11,
    XcalarApiShutdownLocal = 12,
    XcalarApiMakeResultSet = 13,
    XcalarApiResultSetNext = 14,
    XcalarApiJoin = 15,
    XcalarApiFilter = 16,
    XcalarApiGroupBy = 17,
    XcalarApiGetDataDict = 18,
    XcalarApiEditColumn = 19,
    XcalarApiResultSetAbsolute = 20,
    XcalarApiFreeResultSet = 21,
    XcalarApiDeleteTable = 22,
    XcalarApiGetTableRefCount = 23,
    XcalarApiBulkDeleteTables = 24,
    XcalarApiDestroyDataset = 25,
    XcalarApiMap = 26,
    XcalarApiAggregate = 27,
    XcalarApiQuery = 28,
    XcalarApiQueryState = 29,
    XcalarApiExport = 30,
    XcalarApiGetDag = 31,
    XcalarApiListFiles = 32,
    XcalarApiMakeRetina = 33,
    XcalarApiListRetinas = 34,
    XcalarApiGetRetina = 35,
    XcalarApiUpdateRetina = 36,
    XcalarApiAddParameterToRetina = 37,
    XcalarApiListParametersInRetina = 38,
    XcalarApiExecuteRetina = 39,
}

const map<XcalarApisT,string> XcalarApisTStr = {
    XcalarApisT.XcalarApiUnknown:"XcalarApiUnknown",
    XcalarApisT.XcalarApiGetVersion:"XcalarApiGetVersion",
    XcalarApisT.XcalarApiBulkLoad:"XcalarApiBulkLoad",
    XcalarApisT.XcalarApiIndex:"XcalarApiIndex",
    XcalarApisT.XcalarApiCountUnique:"XcalarApiCountUnique",
    XcalarApisT.XcalarApiShutdown:"XcalarApiShutdown",
    XcalarApisT.XcalarApiGetStat:"XcalarApiGetStat",
    XcalarApisT.XcalarApiGetStatByGroupId:"XcalarApiGetStatByGroupId",
    XcalarApisT.XcalarApiResetStat:"XcalarApiResetStat",
    XcalarApisT.XcalarApiGetStatGroupIdMap:"XcalarApiGetStatGroupIdMap",
    XcalarApisT.XcalarApiListTables:"XcalarApiListTables",
    XcalarApisT.XcalarApiListDatasets:"XcalarApiListDatasets",
    XcalarApisT.XcalarApiShutdownLocal:"XcalarApiShutdownLocal",
    XcalarApisT.XcalarApiMakeResultSet:"XcalarApiMakeResultSet",
    XcalarApisT.XcalarApiResultSetNext:"XcalarApiResultSetNext",
    XcalarApisT.XcalarApiJoin:"XcalarApiJoin",
    XcalarApisT.XcalarApiFilter:"XcalarApiFilter",
    XcalarApisT.XcalarApiGroupBy:"XcalarApiGroupBy",
    XcalarApisT.XcalarApiGetDataDict:"XcalarApiGetDataDict",
    XcalarApisT.XcalarApiEditColumn:"XcalarApiEditColumn",
    XcalarApisT.XcalarApiResultSetAbsolute:"XcalarApiResultSetAbsolute",
    XcalarApisT.XcalarApiFreeResultSet:"XcalarApiFreeResultSet",
    XcalarApisT.XcalarApiDeleteTable:"XcalarApiDeleteTable",
    XcalarApisT.XcalarApiGetTableRefCount:"XcalarApiGetTableRefCount",
    XcalarApisT.XcalarApiBulkDeleteTables:"XcalarApiBulkDeleteTables",
    XcalarApisT.XcalarApiDestroyDataset:"XcalarApiDestroyDataset",
    XcalarApisT.XcalarApiMap:"XcalarApiMap",
    XcalarApisT.XcalarApiAggregate:"XcalarApiAggregate",
    XcalarApisT.XcalarApiQuery:"XcalarApiQuery",
    XcalarApisT.XcalarApiQueryState:"XcalarApiQueryState",
    XcalarApisT.XcalarApiExport:"XcalarApiExport",
    XcalarApisT.XcalarApiGetDag:"XcalarApiGetDag",
    XcalarApisT.XcalarApiListFiles:"XcalarApiListFiles",
    XcalarApisT.XcalarApiMakeRetina:"XcalarApiMakeRetina",
    XcalarApisT.XcalarApiListRetinas:"XcalarApiListRetinas",
    XcalarApisT.XcalarApiGetRetina:"XcalarApiGetRetina",
    XcalarApisT.XcalarApiUpdateRetina:"XcalarApiUpdateRetina",
    XcalarApisT.XcalarApiAddParameterToRetina:"XcalarApiAddParameterToRetina",
    XcalarApisT.XcalarApiListParametersInRetina:"XcalarApiListParametersInRetina",
    XcalarApisT.XcalarApiExecuteRetina:"XcalarApiExecuteRetina",
}

